Context Menu scrolls if too tall :bug:

--- a/src/controls/dialogs/dialogs.css
+++ b/src/controls/dialogs/dialogs.css
@@ -106,8 +106,10 @@ dialog {
 	column-gap: 0px;
 	row-gap: 5px;
 	width: fit-content;
+	overflow-y: auto;
 	padding: 10px;
 	position: absolute;
+	z-index: 2030;
 	background-color: var(--enabled-resting-background);
 	border: 1px solid var(--enabled-focus-border);
 	border-radius: 0px 4px 4px 4px;
